--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+ver 0.2.6
+- Added support for 4.15, 4.20~4.24
+
 ver 0.2.5
 - Added check mode (You can check which versions are the same format as your assets)
 - Added check mode and export mode to GUI
