fixed a bug check mode is not working

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+ver 0.3.0-hotfix
+- Fixed a bug check mode is not working
+
 ver 0.3.0
 - Added support for tga, hdr, png, jpg, bmp. (You can inject non-dds files.)
 - Added support for 4.16, 4.17
