--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
-ver 0.3.0-hotfix
+ver 0.3.1
+- Added support for UE4.13, 4.14
 - Fixed a bug check mode is not working
+- Fixed an error when extracting uncompressed HDR textures (FloatRGBA)
+- Minor updates for GUI
 
 ver 0.3.0
 - Added support for tga, hdr, png, jpg, bmp. (You can inject non-dds files.)
