--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ver 0.4.0
 - Updated GUI (v0.1.2 to v0.2.1)
 - Introduced tempfile for temporary files
+- Introduced custom build for texconv (Texconv-Custom-DLL)
+- Supported cubemaps
 
 ver 0.3.3
 - Supported UE5.0 assets
