--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ ver 0.4.5
 - Fixed an error when loading non-zero values for FObjectExport.TemplateIndex
 - Updated GUI to v0.2.2
 - GUI can save output path for each mode
+- Improved error massages for unsupported dds files
 
 ver 0.4.4
 - Supported UE4.0 ~ 4.9.
