--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,7 @@
 ver 0.5.1
 - Updated GUI to v0.3.0
 - Added tooltips to GUI
+- Fixed a bug that max size will be uexp's max size.
 
 ver 0.5.0
 - Supported Texture2DArray, TextureCubeArray, and VolumeTexture
