--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,7 @@ ver 0.5.1
 - Added tooltips to GUI
 - Fixed a bug that max size will be uexp's max size.
 - Fixed a bug that ubulk flags won't be updated correctly.
+- Enabled "skip_non_texture" option and cubic filter as default.
 
 ver 0.5.0
 - Supported Texture2DArray, TextureCubeArray, and VolumeTexture
