introduce multiprocessing, update python version

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,9 @@
 ver 0.5.2
+- Introduced multiprocessing.
+- Updated python from 3.9 to 3.10.
 - Fixed an error when loading empty textures.
 - Fixed an error when exporting BC6 textures.
+- Fixed an error when exports have positive values for class ids.
 
 ver 0.5.1
 - Updated GUI to v0.3.0
