fix a bug that python requires installed vcruntime

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+ver 0.5.3
+- Fixed a bug that python requires installed vcruntime.
+
 ver 0.5.2
 - Supported *.uptnl files.
 - Introduced multiprocessing.
