--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,7 @@ ver 0.5.3
 - Supported UE5.2
 - Fixed a bug that python requires installed vcruntime.
 - Fixed an error for some UE4.25 assets.
+- Fixed a bug that check mode won't work with cubemaps for UE4.24 and 4.25
 
 ver 0.5.2
 - Supported *.uptnl files.
