--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,7 @@
 ver 0.5.6
 - Added support for ETC formats. (ETC1, ETC2_RGB, and ETC2_RGBA)
 - Fixed an error when injecting texture arrays.
+- Fixed an error when injecting ASTC textures.
 
 ver 0.5.5
 - Supported UE5.3
