--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,7 @@ ver 0.6.0
 - Supported ucas/utoc assets.
 - Added support for UE5.4.
 - Updated DirectXTex to the March 2024 release.
+- Updated GUI to v0.6.4
 - Fixed typos.
 - Removed unused python libraries.
 
