--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,6 +1,7 @@
 - Added support for non-2D textures with mipmaps.
 - Fixed errors when reading some ucas/utoc assets from UE5.4 games
 - Fixed some error messages about input paths.
+- Fixed errors when reading some broken dds files.
 
 ver 0.6.0
 - Supported ucas/utoc assets.
