fix a bug that switch assets lose some data when exporting

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,5 @@
+- Fixed a bug that switch assets lose some data when exporting.
+
 ver 0.6.1
 - Added support for non-2D textures with mipmaps.
 - Fixed errors when reading some ucas/utoc assets from UE5.4 games
